Upgrade to Spring Boot 4.0.0-RC1.
- spring-batch: core interfaces like `ItemReader`,`ItemProcessor`,`ItemWriter` are moved to `infrastructure` package.

- spring-integration: DB Column Name `MESSAGE_BYTES` changed to `MESSAGE_CONTENT`

- `AutoConfigureMockMvc`, `MockMvcAutoConfiguration` are move to `webmvc` module, thus new dependency `org.springframework.boot:spring-boot-webmvc-test` is required.

- Temporarily Disable `WebSocketConfigTest`, need further checking.

Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>

--- a/src/test/java/com/jiandong/websocket/websocket.html
+++ b/src/test/java/com/jiandong/websocket/websocket.html
@@ -35,6 +35,8 @@
                 stompClient.send("/app/send-to-user", {}, JSON.stringify({"from":'queue'}));
         })
 
+    }, (err) => {
+        console.error('STOMP protocol error: ' + err);
     });
 </script>
 
